--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="projects.html">Projects</a></li>
         <li><a href="skills.html">Skills & Hobbies</a></li>
         <li><a href="videos.html">Videos</a></li>
+        <li><a href="generator.html">Handwritten Text Generator</a></li>
       </ul>
     </nav>
   </header>
