--- a/generator.html
+++ b/generator.html
@@ -7,68 +7,34 @@
     <title>Handwritten Text Generator | My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin: 0;
-            padding: 20px;
-        }
-        header {
-            width: 100%;
-            background-color: #333;
-            padding: 10px 0;
-            margin-bottom: 40px;
-        }
-        nav ul {
-            list-style: none;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-        }
-        nav ul li {
-            display: inline;
-        }
-        nav ul li a {
-            color: #ffffff;
-            text-decoration: none;
-            padding: 10px 20px;
-            transition: background-color 0.3s;
-        }
-        nav ul li a:hover {
-            background-color: #555;
-            border-radius: 5px;
-        }
-        h1 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
-            text-align: center;
-        }
         .container {
-            background-color: #fff;
+            background-color: #1e1e1e;
             padding: 30px;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
             max-width: 600px;
             width: 100%;
+            margin: 0 auto;
             text-align: center;
         }
+
         label {
             display: block;
             margin: 15px 0 5px;
             font-weight: bold;
         }
-        input, textarea {
+
+        input,
+        textarea {
             width: 100%;
             padding: 10px;
             margin: 5px 0 15px;
-            border: 1px solid #ccc;
+            border: 1px solid #333333;
             border-radius: 3px;
+            background-color: #2e2e2e;
+            color: #ffffff;
         }
+
         button {
             padding: 10px 20px;
             margin-top: 10px;
@@ -79,19 +45,22 @@
             cursor: pointer;
             transition: background-color 0.3s;
         }
+
         button:hover {
             background-color: #218838;
         }
+
         .result {
             margin-top: 20px;
             text-align: center;
         }
+
         .result iframe {
             width: 100%;
             height: 500px;
             border: none;
             border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
     </style>
 </head>
