--- a/generator.html
+++ b/generator.html
@@ -42,6 +42,16 @@
             color: #ffffff;
         }
 
+        select {
+            width: 100%;
+            padding: 10px;
+            margin: 5px 0 15px;
+            border: 1px solid #333333;
+            border-radius: 3px;
+            background-color: #2e2e2e;
+            color: #ffffff;
+        }
+
         button {
             padding: 10px 20px;
             margin-top: 10px;
@@ -94,6 +104,12 @@
                 <label for="textInput">Enter your text:</label>
                 <textarea id="textInput" name="textInput" rows="4" required></textarea>
 
+                <label for="backgroundChoice">Choose background:</label>
+                <select id="backgroundChoice" name="backgroundChoice" required>
+                    <option value="white">White</option>
+                    <option value="lined">Lined</option>
+                </select>
+
                 <button type="submit">Generate PDF</button>
             </form>
             <div class="result" id="result">
@@ -108,6 +124,7 @@
             const formData = new FormData();
             formData.append('fontFile', document.getElementById('fontFile').files[0]);
             formData.append('textInput', document.getElementById('textInput').value);
+            formData.append('backgroundChoice', document.getElementById('backgroundChoice').value);
 
             const response = await fetch('https://venom343.pythonanywhere.com/generate', {
                 method: 'POST',
