--- a/generator.html
+++ b/generator.html
@@ -91,6 +91,7 @@
                 <li><a href="skills.html">Skills & Hobbies</a></li>
                 <li><a href="videos.html">Videos</a></li>
                 <li><a href="generator.html">Handwritten Text Generator</a></li>
+                <li><a href="font_generator.html">Font Generator</a></li>
             </ul>
         </nav>
     </header>
