--- a/font_generator.html
+++ b/font_generator.html
@@ -49,6 +49,12 @@
         button:hover {
             background-color: #218838;
         }
+
+        .button-group {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+        }
     </style>
 </head>
 
@@ -72,7 +78,10 @@
             <div id="drawingArea" style="display:none;">
                 <h2 id="currentCharacter"></h2>
                 <canvas id="drawingCanvas" width="1600" height="1600"></canvas> <!-- Increased resolution -->
-                <button id="nextButton">Next</button>
+                <div class="button-group">
+                    <button id="deleteButton">Delete</button>
+                    <button id="nextButton">Next</button>
+                </div>
             </div>
         </div>
     </section>
@@ -83,6 +92,7 @@
         const drawingArea = document.getElementById('drawingArea');
         const currentCharacter = document.getElementById('currentCharacter');
         const drawingCanvas = document.getElementById('drawingCanvas');
+        const deleteButton = document.getElementById('deleteButton');
         const nextButton = document.getElementById('nextButton');
         const ctx = drawingCanvas.getContext('2d');
         const drawings = {};
@@ -136,6 +146,10 @@
                     .catch(error => console.error('Error:', error));
                 }
             }
+        }
+
+        function deleteDrawing() {
+            clearCanvas();
         }
 
         drawingCanvas.addEventListener('mousedown', startDrawing);
@@ -193,6 +207,7 @@
         });
 
         nextButton.addEventListener('click', nextCharacter);
+        deleteButton.addEventListener('click', deleteDrawing);
     </script>
 </body>
 
