--- a/font_generator.html
+++ b/font_generator.html
@@ -133,7 +133,12 @@
                         },
                         body: JSON.stringify(drawings)
                     })
-                    .then(response => response.blob())
+                    .then(response => {
+                        if (!response.ok) {
+                            throw new Error('Network response was not ok');
+                        }
+                        return response.blob();
+                    })
                     .then(blob => {
                         const url = URL.createObjectURL(blob);
                         const a = document.createElement('a');
