--- a/videos.html
+++ b/videos.html
@@ -24,19 +24,19 @@
         <div class="video-row">
             <div class="video-container">
                 <div class="video-wrapper tiktok">
-                    <iframe src="https://jumpshare.com/embed/GasT1q659Tkq4nXH4JC4" frameborder="0" webkitallowfullscreen
+                    <iframe src="https://www.tiktok.com/@fearghg/video/7376334675691703584" frameborder="0" webkitallowfullscreen
                         mozallowfullscreen allowfullscreen></iframe>
                 </div>
             </div>
             <div class="video-container">
                 <div class="video-wrapper tiktok">
-                    <iframe src="https://jumpshare.com/embed/06YrAsrEW8yXe4JwxUxg" frameborder="0" webkitallowfullscreen
+                    <iframe src="https://www.tiktok.com/@fearghg/video/7375490687170596128" frameborder="0" webkitallowfullscreen
                         mozallowfullscreen allowfullscreen></iframe>
                 </div>
             </div>
             <div class="video-container">
                 <div class="video-wrapper tiktok">
-                    <iframe src="https://jumpshare.com/embed/SJyI6jCFAsHQMMyd0YqQ" frameborder="0" webkitallowfullscreen
+                    <iframe src="https://www.tiktok.com/@fearghg/video/7362878037186153761" frameborder="0" webkitallowfullscreen
                         mozallowfullscreen allowfullscreen></iframe>
                 </div>
             </div>
