--- a/videos.html
+++ b/videos.html
@@ -23,22 +23,46 @@
         <h1>My Videos</h1>
         <div class="video-row">
             <div class="video-container">
-                <div class="video-wrapper tiktok">
-                    <iframe src="https://www.tiktok.com/@fearghg/video/7376334675691703584" frameborder="0" webkitallowfullscreen
-                        mozallowfullscreen allowfullscreen></iframe>
-                </div>
+                <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@fearghg/video/7376334675691703584" data-video-id="7376334675691703584" style="max-width: 605px;min-width: 325px;">
+                    <section>
+                        <a target="_blank" title="@fearghg" href="https://www.tiktok.com/@fearghg?refer=embed">@fearghg</a>
+                        Re-do of my superbad edit
+                        <a title="edit" target="_blank" href="https://www.tiktok.com/tag/edit?refer=embed">#edit</a>
+                        <a title="ae" target="_blank" href="https://www.tiktok.com/tag/ae?refer=embed">#ae</a>
+                        <a title="superbadmovie" target="_blank" href="https://www.tiktok.com/tag/superbadmovie?refer=embed">#superbadmovie</a>
+                        <a title="mclovin" target="_blank" href="https://www.tiktok.com/tag/mclovin?refer=embed">#mclovin</a>
+                        <a target="_blank" title="♬ Originalton - Fears" href="https://www.tiktok.com/music/Originalton-7376334728641514272?refer=embed">♬ Originalton - Fears</a>
+                    </section>
+                </blockquote>
+                <script async src="https://www.tiktok.com/embed.js"></script>
             </div>
             <div class="video-container">
-                <div class="video-wrapper tiktok">
-                    <iframe src="https://www.tiktok.com/@fearghg/video/7375490687170596128" frameborder="0" webkitallowfullscreen
-                        mozallowfullscreen allowfullscreen></iframe>
-                </div>
+                <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@fearghg/video/7375490687170596128" data-video-id="7375490687170596128" style="max-width: 605px;min-width: 325px;">
+                    <section>
+                        <a target="_blank" title="@fearghg" href="https://www.tiktok.com/@fearghg?refer=embed">@fearghg</a>
+                        Too cold
+                        <a title="edit" target="_blank" href="https://www.tiktok.com/tag/edit?refer=embed">#edit</a>
+                        <a title="tomandjerry" target="_blank" href="https://www.tiktok.com/tag/tomandjerry?refer=embed">#tomandjerry</a>
+                        <a title="ae" target="_blank" href="https://www.tiktok.com/tag/ae?refer=embed">#ae</a>
+                        <a target="_blank" title="♬ Originalton - Fears" href="https://www.tiktok.com/music/Originalton-7375490857758427936?refer=embed">♬ Originalton - Fears</a>
+                    </section>
+                </blockquote>
+                <script async src="https://www.tiktok.com/embed.js"></script>
             </div>
             <div class="video-container">
-                <div class="video-wrapper tiktok">
-                    <iframe src="https://www.tiktok.com/@fearghg/video/7362878037186153761" frameborder="0" webkitallowfullscreen
-                        mozallowfullscreen allowfullscreen></iframe>
-                </div>
+                <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@fearghg/video/7362878037186153761" data-video-id="7362878037186153761" style="max-width: 605px;min-width: 325px;">
+                    <section>
+                        <a target="_blank" title="@fearghg" href="https://www.tiktok.com/@fearghg?refer=embed">@fearghg</a>
+                        This took too long😭
+                        <a title="uncharted" target="_blank" href="https://www.tiktok.com/tag/uncharted?refer=embed">#uncharted</a>
+                        <a title="peterparker" target="_blank" href="https://www.tiktok.com/tag/peterparker?refer=embed">#peterparker</a>
+                        <a title="tomholland" target="_blank" href="https://www.tiktok.com/tag/tomholland?refer=embed">#tomholland</a>
+                        <a title="nathandrake" target="_blank" href="https://www.tiktok.com/tag/nathandrake?refer=embed">#nathandrake</a>
+                        <a title="ae" target="_blank" href="https://www.tiktok.com/tag/ae?refer=embed">#ae</a>
+                        <a target="_blank" title="♬ Originalton - Fears" href="https://www.tiktok.com/music/Originalton-7362878095294958368?refer=embed">♬ Originalton - Fears</a>
+                    </section>
+                </blockquote>
+                <script async src="https://www.tiktok.com/embed.js"></script>
             </div>
         </div>
         <!-- Add more rows as needed -->
