--- a/videos.html
+++ b/videos.html
@@ -23,18 +23,23 @@
         <h1>My Videos</h1>
         <div class="video-row">
             <div class="video-container">
-                <div class="video-wrapper tiktok">
-                    <iframe src="https://www.tiktok.com/embed/v2/7376334675691703584" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <div style="position:relative; width:100%; height:0px; padding-bottom:133.333%">
+                    <iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/tt2jzr?loop=0&muted=1" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe>
                 </div>
             </div>
             <div class="video-container">
-                <div class="video-wrapper tiktok">
-                    <iframe src="https://www.tiktok.com/embed/v2/7375490687170596128" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <div style="position:relative; width:100%; height:0px; padding-bottom:133.333%">
+                    <iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/f8a6db?loop=0&muted=1" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe>
                 </div>
             </div>
             <div class="video-container">
-                <div class="video-wrapper tiktok">
-                    <iframe src="https://www.tiktok.com/embed/v2/7362878037186153761" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <div style="position:relative; width:100%; height:0px; padding-bottom:177.778%">
+                    <iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/ey1emv?loop=0&muted=1" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe>
+                </div>
+            </div>
+            <div class="video-container">
+                <div style="position:relative; width:100%; height:0px; padding-bottom:133.333%">
+                    <iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/wtmoyb?loop=0&muted=1" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe>
                 </div>
             </div>
         </div>
