--- a/generator.html
+++ b/generator.html
@@ -109,6 +109,7 @@
                 <select id="backgroundChoice" name="backgroundChoice" required>
                     <option value="white">White</option>
                     <option value="lined">Lined</option>
+                    <option value="transparent">Transparent</option>
                 </select>
 
                 <button type="submit">Generate PDF</button>
